mysqli_real_escape_string added

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine on 
 RewriteCond %{HTTP_REFERER} !^http://(www\.)?localhost [NC] 
 RewriteCond %{HTTP_REFERER} !^http://(www\.)?localhost.*$ [NC] 
+RewriteCond %{HTTP_REFERER} !^http://(www\.)?127.0.0.1 [NC] 
+RewriteCond %{HTTP_REFERER} !^http://(www\.)?127.0.0.1.*$ [NC] 
 RewriteRule \.(gif|jpg|jpeg|png|mp4)$ - [F]
